add payments-ms submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "products-ms"]
 	path = products-ms
 	url = https://github.com/rubenbarce/products-ms.git
+[submodule "payments-ms"]
+	path = payments-ms
+	url = https://github.com/rubenbarce/payments-ms.git
